# DomainModelMaker

./: .gitignore
.github/workflows/: checks-client.yml  checks-rust.yml
client/: package.json  pnpm-lock.yaml  tsconfig.json
client/public/: index.html  manifest.json
client/src/: generator  index.css  index.tsx
client/src/app/: App.tsx  CodeInput.tsx  DropdownButton.tsx  ImagePreview.tsx  Nav.tsx  Symbol.tsx  app.css  codeInput.css  dropdownButton.css  graph.ts  imagePreview.css  nav.css
docs/: README.md
server/: Cargo.toml
server/src/: graph.rs  lib.rs  main.rs  parser.rs  tokenizer.rs
server/src/domain_model/: graph.rs  mod.rs  parser.rs  tokenizer.rs
server/src/domain_model/parser/: mod.rs  statementizer.rs  tokenizer.rs
server/src/image_generation/: mod.rs
server/src/image_generation/placers/: force_directed.rs  inertia.rs  mod.rs
server/tests/: lib.rs
server/tests/domain_model_tests/: mod.rs  tokenizer_tests.rs
